--- a/courseratingstyle.css
+++ b/courseratingstyle.css
@@ -112,101 +112,6 @@ h1{
     font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   }
   
-  /* For Star Rating */
-  /* https://www.codewithrandom.com/2023/05/04/star-rating-using-html-css/ */
-  .rating {
-    margin-left: -25px;
-    width: 225px;
-  }
-  
-  /* Placing Stars */
-  .rating label {
-    /* Stars select left to right */
-    float: right;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-  }
-  
-  /* Spacing Stars */
-  .rating label:not(:first-of-type) {
-    padding-right: 0px;
-  }
-  
-  /* What happens before stars are checked */
-  .rating label:before {
-    /* Code for stars */
-    content: "\2605";
-    /* Star size */
-    font-size: 35px;
-    color: darkred;
-    line-height: 1;
-  }
-  
-  /* Deleting original clickable ratings */
-  .rating input {
-    display: none;
-  }
-  
-  /* Making clicked or hovered stars orange */
-  .rating input:checked ~ label:before, .rating:not(:checked) > label:hover:before, .rating:not(:checked) > label:hover ~ label:before {
-    color: orange;
-  }
-
-  .courseCard{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.2s;
-    border: 2px solid darkred; 
-    padding: 2px 14px;  /* spacing inside card around text */
-    border-radius: 25px; /* rounded borders */
-    color: darkred;
-    text-align: center;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Allowing coursecards to expand when the text becomes too much */
-  #allcourses {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 20px;
-    padding: 75px;
-  }
-  
-  /* Formatting what happens when coursecards are hovered over */
-  .courseCard:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    background-color: darkred;
-    color: white; /* making text white */
-    cursor: pointer;
-    
-  }
-  
-  .courseCard:hover h1 {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard:hover h3 {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard:hover p {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard .rating {
-    color: #ffd700; /* set the color of the stars */
-    font-size: 24px; /* set the size of the stars */
-    margin-top: 10px; /* add some spacing between the title and the stars */
-    margin-bottom: 10px;
-    cursor: pointer;
-  }
-  
   .postCard {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border: 2px solid darkred; 
@@ -224,10 +129,11 @@ h1{
     padding: 50px;
   }
   
+  /* For any FA star */
   .checked {
     color:orange;
   }
   
   .unchecked {
-    color: darkred;
+    color: darkgrey;
   }
