--- a/indexstyle.css
+++ b/indexstyle.css
@@ -136,8 +136,9 @@ span {
     display: block;
     border-bottom: 2px solid darkred;
   }
+  
   /* Style the header: fixed position (always stay at the top) */
-.header {
+  .header {
     position: fixed;
     top: 0;
     z-index: 1;
@@ -189,5 +190,62 @@ span {
     width: 70%;
     height: 100px;
     border-collapse: collapse;
-    }
+  }
+
+  .courseCard{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.2s;
+    border: 2px solid darkred; 
+    padding-left: 14px;  /* spacing inside card around text */
+    padding-right: 14px;
+    padding-top: 0px;
+    padding-bottom: 15px;
+    border-radius: 25px; /* rounded borders */
+    color: darkred;
+    text-align: center;
+    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  }
+  
+  /* Allowing coursecards to expand when the text becomes too much */
+  #allcourses {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    padding: 75px;
+  }
+  
+  /* Formatting what happens when coursecards are hovered over */
+  .courseCard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    background-color: darkred;
+    color: white; /* making text white */
+    cursor: pointer;
+    
+  }
+  
+  .courseCard:hover h1 {
+    transition: 0.25s;
+    color: white; /* making text white */
+    cursor: pointer;
+  }
+  
+  .courseCard:hover h3 {
+    transition: 0.25s;
+    color: white; /* making text white */
+    cursor: pointer;
+  }
+  
+  .courseCard:hover p {
+    transition: 0.25s;
+    color: white; /* making text white */
+    cursor: pointer;
+  }
+  
+  .courseCard .rating {
+    color: #ffd700; /* set the color of the stars */
+    font-size: 24px; /* set the size of the stars */
+    margin-top: 10px; /* add some spacing between the title and the stars */
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
   
