--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,252 +1,254 @@
 /* Establish font for whole page */
 *{
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
 
-  /* To make the "2023" smaller at the end */
+/* To make the "2023" smaller at the end */
 span {
-    color: darkred;
-    font-size: 45px;
-    text-align:center;
-    margin-bottom: 30px;
-    margin-top: 40px;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  
-  /* For the "Submit" button on the newPost page*/
-  .button {
-    background-color: darkred;
-    border: none;
-    color: white;
-    padding: 15px 28px;
-    text-align: center;
-    text-decoration: none;
-    float: right;
-    border-radius: 10px;
-    font-size: 16px;
-    margin: 50px 50px;
-    cursor: pointer;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
-  }
-  
-  .button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  }
-  
-  /* The navigation menu */
-  .navbar {
-    overflow: hidden;
-    background-color: white;
-    border-bottom: 2px solid darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Navigation links */
-  .navbar a {
-    float: left;
-    font-weight: bold;
-    font-size: 20px;
-    color: darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    text-align: center;
-    padding: 10px 7%;
-    text-decoration: none;
-  }
-  
-  .navbar b {
-    float: left;
-    font-weight: bold;
-    font-size: 20px;
-    color: darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    text-align: center;
-    padding: 10px 7%;
-    text-decoration: none;
-  }
-  
-  /* The subnavigation menu */
-  .subnav {
-    float: left;
-    overflow: hidden;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Subnav button */
-  .subnav .subnavbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    padding-left: 30%;
-    padding: 15px 26px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  /* Add a red background color to navigation links on hover */
-  .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: darkred;
-    color:white;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    cursor: pointer;
-  }
-  
-  /* Not using navbar b currently */
-  .navbar b:hover, .subnav:hover .subnavbtn {
-    background-color: darkred;
-    color:white;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    cursor: pointer;
-  }
-  
-  /* Style the subnav content - positioned absolute */
-  .subnav-content {
-    display: none;
-    position:absolute;
-    left: 0;
-    padding: 4px 10px;
-    background-color: white;
-    width: 100%;
-    z-index: 1;
-  }
-  
-  /* Style the subnav links */
-  .subnav-content a {
-    float: left;
-    margin-left: 11%;
-    padding: 15px 20px;
-    font-weight: normal;
-    font-size: medium;
-    color: darkred;
-    text-decoration: none;
-  }
-  
-  /* Add a grey background color on hover */
-  .subnav-content a:hover {
-    background-color: darkred;
-    color: white;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* When you move the mouse over the subnav container, open the subnav content */
-  .subnav:hover .subnav-content {
-    display: block;
-    border-bottom: 2px solid darkred;
-  }
-  
-  /* Style the header: fixed position (always stay at the top) */
-  .header {
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    background-color: #f1f1f1;
-  }
-  
-  /* The progress container (grey background) */
-  .progress-container {
-    width: 100%;
-    height: 8px;
-    background: #ccc;
-  }
-  
-  /* The progress bar (scroll indicator) */
-  .progress-bar {
-    height: 8px;
-    background: #04AA6D;
-    width: 0%;
-  }
-  
-  /*For search bar on home page */
-  .index input[type=text] {
-    width: 40%;
-    padding: 5px 20px;
-    margin: 0 auto;
-    display: block;
-    box-sizing: border-box;
-    transition: width 0.4s ease-in-out;
-    border: none;
-    border-bottom: 2px solid black;
-    border-radius: 0px;
-  }
-  
-  .index input[type=text]:focus {
-    width: 43%;
-    outline: none;
-  }
-  
-  /* For Tables */
-  table, td, th {
-    border: 0px solid;
-  }
-  
-  table {
-    margin-left: 10%;
-    text-align: left;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    width: 70%;
-    height: 100px;
-    border-collapse: collapse;
-  }
+  color: darkred;
+  font-size: 45px;
+  text-align:center;
+  margin-bottom: 30px;
+  margin-top: 40px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
 
-  .courseCard{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.2s;
-    border: 2px solid darkred; 
-    padding-left: 14px;  /* spacing inside card around text */
-    padding-right: 14px;
-    padding-top: 0px;
-    padding-bottom: 15px;
-    border-radius: 25px; /* rounded borders */
-    color: darkred;
-    text-align: center;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
+
+/* For the "Submit" button on the newPost page*/
+.button {
+  background-color: darkred;
+  border: none;
+  color: white;
+  padding: 15px 28px;
+  text-align: center;
+  text-decoration: none;
+  float: right;
+  border-radius: 10px;
+  font-size: 16px;
+  margin: 50px 50px;
+  cursor: pointer;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/* The navigation menu */
+.navbar {
+  overflow: hidden;
+  background-color: white;
+  border-bottom: 2px solid darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* Navigation links */
+.navbar a {
+  float: left;
+  font-weight: bold;
+  font-size: 20px;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  text-align: center;
+
+  padding: 10px 7%;
+  text-decoration: none;
+}
+
+.navbar .npbutton {
+  float: right;
+  font-weight: bold;
+  font-size: 20px;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  text-align: center;
+  padding-right: 30px 7%;
+  padding-left: 30px 7%;
+  padding: 10px 7%;
+  text-decoration: none;
+}
+
+/* The subnavigation menu */
+.subnav {
+  float: left;
+  overflow: hidden;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* Subnav button */
+.subnav .subnavbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  padding-left: 30%;
+  padding: 15px 26px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+/* Add a red background color to navigation links on hover */
+.navbar a:hover, .subnav:hover .subnavbtn {
+  background-color: darkred;
+  color:white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  cursor: pointer;
+}
+
+/* Not using navbar b currently */
+.navbar b:hover, .subnav:hover .subnavbtn {
+  background-color: darkred;
+  color:white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  cursor: pointer;
+}
+
+/* Style the subnav content - positioned absolute */
+.subnav-content {
+  display: none;
+  position:absolute;
+  left: 0;
+  padding: 4px 10px;
+  background-color: white;
+  width: 100%;
+  z-index: 1;
+}
+
+/* Style the subnav links */
+.subnav-content a {
+  float: left;
+  margin-left: 11%;
+  padding: 15px 20px;
+  font-weight: normal;
+  font-size: medium;
+  color: darkred;
+  text-decoration: none;
+}
+
+/* Add a grey background color on hover */
+.subnav-content a:hover {
+  background-color: darkred;
+  color: white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* When you move the mouse over the subnav container, open the subnav content */
+.subnav:hover .subnav-content {
+  display: block;
+  border-bottom: 2px solid darkred;
+}
+
+/* Style the header: fixed position (always stay at the top) */
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #04AA6D;
+  width: 0%;
+}
+
+/*For search bar on home page */
+.index input[type=text] {
+  width: 40%;
+  padding: 5px 20px;
+  margin: 0 auto;
+  display: block;
+  box-sizing: border-box;
+  transition: width 0.4s ease-in-out;
+  border: none;
+  border-bottom: 2px solid black;
+  border-radius: 0px;
+}
+
+.index input[type=text]:focus {
+  width: 43%;
+  outline: none;
+}
+
+/* For Tables */
+table, td, th {
+  border: 0px solid;
+}
+
+table {
+  margin-left: 10%;
+  text-align: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 70%;
+  height: 100px;
+  border-collapse: collapse;
+}
+
+.courseCard{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.2s;
+  border: 2px solid darkred; 
+  padding-left: 14px;  /* spacing inside card around text */
+  padding-right: 14px;
+  padding-top: 0px;
+  padding-bottom: 15px;
+  border-radius: 25px; /* rounded borders */
+  color: darkred;
+  text-align: center;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* Allowing coursecards to expand when the text becomes too much */
+#allcourses {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 20px;
+  padding: 75px;
+}
+
+/* Formatting what happens when coursecards are hovered over */
+.courseCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background-color: darkred;
+  color: white; /* making text white */
+  cursor: pointer;
   
-  /* Allowing coursecards to expand when the text becomes too much */
-  #allcourses {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 20px;
-    padding: 75px;
-  }
-  
-  /* Formatting what happens when coursecards are hovered over */
-  .courseCard:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    background-color: darkred;
-    color: white; /* making text white */
-    cursor: pointer;
-    
-  }
-  
-  .courseCard:hover h1 {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard:hover h3 {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard:hover p {
-    transition: 0.25s;
-    color: white; /* making text white */
-    cursor: pointer;
-  }
-  
-  .courseCard .rating {
-    color: #ffd700; /* set the color of the stars */
-    font-size: 24px; /* set the size of the stars */
-    margin-top: 10px; /* add some spacing between the title and the stars */
-    margin-bottom: 10px;
-    cursor: pointer;
-  }
-  
+}
+
+.courseCard:hover h1 {
+  transition: 0.25s;
+  color: white; /* making text white */
+  cursor: pointer;
+}
+
+.courseCard:hover h3 {
+  transition: 0.25s;
+  color: white; /* making text white */
+  cursor: pointer;
+}
+
+.courseCard:hover p {
+  transition: 0.25s;
+  color: white; /* making text white */
+  cursor: pointer;
+}
+
+.courseCard .rating {
+  color: #ffd700; /* set the color of the stars */
+  font-size: 24px; /* set the size of the stars */
+  margin-top: 10px; /* add some spacing between the title and the stars */
+  margin-bottom: 10px;
+  cursor: pointer;
+}
