--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
+/* To make the "2023" smaller at the end */
+span {
+  color: darkred;
+  font-size: 45px;
+  text-align:center;
+  margin-bottom: 30px;
+  margin-top: 40px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+
 /* For the "Submit" button on the newPost page*/
 .button {
   background-color: darkred;
@@ -33,7 +44,6 @@
 
 /* Navigation links */
 .navbar a {
-  float: left;
   font-weight: bold;
   font-size: 20px;
   color: darkred;
@@ -43,15 +53,16 @@
   text-decoration: none;
 }
 
-.navbar b {
-  float: left;
-  font-weight: bold;
-  font-size: 20px;
-  color: darkred;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  text-align: center;
+/* For navbar button */
+.npbutton {
+  float: right;
   padding: 10px 7%;
-  text-decoration: none;
+}
+
+.rpbutton {
+  float: left;
+  margin-right: 70px;
+  padding: 10px 7%;
 }
 
 /* The subnavigation menu */
@@ -73,22 +84,6 @@
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-}
-
-/* Add a red background color to navigation links on hover */
-.navbar a:hover, .subnav:hover .subnavbtn {
-  background-color: darkred;
-  color:white;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  cursor: pointer;
-}
-
-/* Not using navbar b currently */
-.navbar b:hover, .subnav:hover .subnavbtn {
-  background-color: darkred;
-  color:white;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  cursor: pointer;
 }
 
 /* Style the subnav content - positioned absolute */
@@ -113,195 +108,19 @@
   text-decoration: none;
 }
 
-/* Add a grey background color on hover */
-.subnav-content a:hover {
-  background-color: darkred;
-  color: white;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
 /* When you move the mouse over the subnav container, open the subnav content */
 .subnav:hover .subnav-content {
   display: block;
   border-bottom: 2px solid darkred;
 }
 
-/* For Post Card and Course Card */
-h1{
-  color: darkred;
-  font-size: 70px;
-  text-align:center;
-  margin-bottom: 30px;
-  margin-top: 40px;
+/* Add a red background color to navigation links on hover */
+.navbar a:hover, .subnav:hover .subnavbtn, .npbutton:hover, .subnav-content a:hover{
+  background-color: darkred;
+  color:white;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  cursor: pointer;
 }
-
-/* This is for the RATEPea page header*/
-h6 {
-  color: darkred;
-  font-size: 70px;
-  text-size-adjust: 30x;
-  text-align:center;
-  margin-bottom: 30px;
-  margin-top: 40px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* To make the "2023" smaller at the end */
-span {
-  color: darkred;
-  font-size: 45px;
-  text-align:center;
-  margin-bottom: 30px;
-  margin-top: 40px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For Course and newPost course headers */
-h2 {
-  color: darkred;
-  font-size: 70px;
-  text-align:left;
-  margin-top: 40px;
-  margin-left: 70px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For search bar on Homepage */
-h3 {
-  color: darkred;
-  font-size: 20px;
-  text-align:center;
-  margin: 10px 0;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-h3 a {
-  color: darkred;
-  font-size: 20px;
-  text-align:center;
-  margin: 10px 0;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For rating, subject, and description in Course page */
-h4 {
-  color: darkred;
-  font-size: 40px;
-  text-align:left;
-  margin-top: -40px;
-  margin-left: 100px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For elements of Course Table */
-h5 {
-  color: darkred;
-  font-size: 25px;
-  text-align:center;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For Course Name in Course Card */
-p{
-  color: darkred;
-  font-size: 20px;
-  text-align:center;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For User in Post Card */
-.user{
-  color: darkred;
-  font-size: 30px;
-  text-align:left;
-  font-weight: 700;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For Term and Teacher in Post Card */
-.termandteacher{
-  color: darkred;
-  font-size: 25px;
-  text-align:left;
-  font-weight: 600;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-.body{
-  color: darkred;
-  font-size: 20px;
-  text-align:left;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For Review in Post Card */
-.review{
-  color: darkred;
-  font-size: 20px;
-  text-align:left;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For labels on newPost and Course pages */
-.labelsf {
-  color: darkred;
-  font-size: 20px;
-  text-align:center;
-  margin: 30px 0;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For search bar on home and some input queries on newPost */
-input[type=text] {
-  width: 400pxpx;
-  padding: 12px 20px;
-  margin-left: 0%;
-  margin: 8 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: 1px solid grey;
-  border-radius: 8px;
-}
-
-input[type=text]:focus {
-  border: 1.5px solid #555;
-  outline: none;
-}
-
-/* For certain inputs on the newPost page */
-.ids input[type=text] {
-  width: 300px;
-  padding: 12px 20px;
-  margin-left: 0%;
-  margin: 8 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: 1px solid grey;
-  border-radius: 8px;
-}
-
-.ids input[type=text]:focus {
-  border: 1.5px solid #555;
-  outline: none;
-}
-
-/* To make datalist search bars look good */
-.datalist input {
-  width: 300px;
-  padding: 12px 20px;
-  margin-left: 0%;
-  margin: 8 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: 1px solid grey;
-  border-radius: 8px;
-  outline: none;
-}
-
 
 /* Style the header: fixed position (always stay at the top) */
 .header {
@@ -341,6 +160,7 @@ input[type=text]:focus {
 
 .index input[type=text]:focus {
   width: 43%;
+  outline: none;
 }
 
 /* For Tables */
@@ -356,111 +176,16 @@ table {
   width: 70%;
   height: 100px;
   border-collapse: collapse;
-  }
-
-/* What does this do? */
-table td:nth-child(1){
-  width: 200%;
-  height: 100px;
-  border-collapse: collapse;
-}
-
-/* Not using this anymroe */
-.headert table {
-  margin-left: 5%;
-  text-align: left;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 90%;
-  height: 100px;
-  border-collapse: collapse;
-}
-
-/* For Star Rating */
-/* https://www.codewithrandom.com/2023/05/04/star-rating-using-html-css/ */
-.rating {
-  margin-left: -25px;
-  width: 225px;
-}
-
-/* Placing Stars */
-.rating label {
-  /* Stars select left to right */
-  float: right;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-}
-
-/* Spacing Stars */
-.rating label:not(:first-of-type) {
-  padding-right: 0px;
-}
-
-/* What happens before stars are checked */
-.rating label:before {
-  /* Code for stars */
-  content: "\2605";
-  /* Star size */
-  font-size: 35px;
-  color: darkred;
-  line-height: 1;
-}
-
-/* Deleting original clickable ratings */
-.rating input {
-  display: none;
-}
-
-/* Making clicked or hovered stars orange */
-.rating input:checked ~ label:before, .rating:not(:checked) > label:hover:before, .rating:not(:checked) > label:hover ~ label:before {
-  color: orange;
-}
-
-/* ratingb is for coursecards, postcards, and course */
-.ratingb {
-  margin-left: -25px;
-  width: 225px;
-}
-
-/* Placing Stars */
-.ratingb label {
-  /* Stars select left to right */
-  float: right;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-}
-
-/* Spacing Stars */
-.ratingb label:not(:first-of-type) {
-  padding-right: 0px;
-}
-
-.ratingb label:before {
-  /* Code for stars */
-  content: "\2605";
-  /* Star size */
-  font-size: 35px;
-  color: #ccc;
-  line-height: 1;
-}
-
-/* Deleting original clickable ratings */
-.ratingb input {
-  display: none;
-}
-
-/* Making clicked stars orange */
-.ratingb input:checked ~ label:before {
-  color: orange;
 }
 
 .courseCard{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.2s;
   border: 2px solid darkred; 
-  padding: 2px 14px;  /* spacing inside card around text */
+  padding-left: 14px;  /* spacing inside card around text */
+  padding-right: 14px;
+  padding-top: 0px;
+  padding-bottom: 15px;
   border-radius: 25px; /* rounded borders */
   color: darkred;
   text-align: center;
@@ -508,29 +233,4 @@ table td:nth-child(1){
   margin-top: 10px; /* add some spacing between the title and the stars */
   margin-bottom: 10px;
   cursor: pointer;
-}
-
-.postCard {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border: 2px solid darkred; 
-  padding: 15px 20px;  /* spacing inside card around text */
-  border-radius: 25px; /* rounded borders */
-  color: darkred;
-  text-align: center;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-#allreviews {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 20px;
-  padding: 50px;
-}
-
-.checked {
-  color:orange;
-}
-
-.unchecked {
-  color: darkred;
 }
