--- a/views/course.ejs
+++ b/views/course.ejs
@@ -4,7 +4,7 @@
     <style>
         /* Add your CSS styles here */
         .username {
-            color: blue;
+            color: darkred;
         }
         .term {
             font-weight: bold;
@@ -207,6 +207,9 @@ table {
   color: darkred;
   text-align: center;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 30px;
 }
 
 /* Allowing coursecards to expand when the text becomes too much */
@@ -215,33 +218,6 @@ table {
   grid-template-columns: auto auto;
   grid-gap: 20px;
   padding: 75px;
-}
-
-/* Formatting what happens when coursecards are hovered over */
-.courseCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  background-color: darkred;
-  color: white; /* making text white */
-  cursor: pointer;
-  
-}
-
-.courseCard:hover h1 {
-  transition: 0.25s;
-  color: white; /* making text white */
-  cursor: pointer;
-}
-
-.courseCard:hover h3 {
-  transition: 0.25s;
-  color: white; /* making text white */
-  cursor: pointer;
-}
-
-.courseCard:hover p {
-  transition: 0.25s;
-  color: white; /* making text white */
-  cursor: pointer;
 }
 
 .courseCard .rating {
