--- a/views/course.ejs
+++ b/views/course.ejs
@@ -392,11 +392,15 @@ p{
   margin-left: 30px;
   margin-right: 30px;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
 
-    </style>
+  
+}
+</style>
+<head>
     <title>Course</title>
 </head>
+
+<h1>Course</h1>
 
 <body>
     <% courseList.forEach(course => { %>
